--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
-    "express": "^4.21.1"
+    "@types/create-hash": "^1.2.6",
+    "@types/validator": "^13.12.2",
+    "create-hash": "^1.2.0",
+    "express": "^4.21.1",
+    "validator": "^13.12.0"
   }
 }
